@@ -1,3 +1,11 @@
+2016-11-04  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/plots/colors.py:
+
+	Added a function to import colormaps from txt files.
+
+	cmap_from_txt() and cmap_from_act() also register the reversed colormap.
+
 2016-11-03  Lukas Kluft  <lukas.kluft@gmail.com>
 
 	* typhon/plots/cm/_cm.py:
